--- a/package.json
+++ b/package.json
@@ -2,4 +2,10 @@
   "dependencies": {
     "react-icons": "^5.2.1"
   }
+  "scripts": {
+    "dev": "vite",
+    "build": "CI=false vite build",
+    "serve": "vite preview",
+    "lint": "eslint --max-warnings=0 src/**/*.{js,jsx,ts,tsx}"
+  }
 }
